# lucenaBAL

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: doxygen.yml  main.yml
cmake/: lbalConfig.hpp.in  lbalGenerated.hpp.in
docs/: .gitignore  CMakeLists.txt  Doxyfile.in
examples/: namespace_example.cpp
html/: dir_0693bdef93574ca592ac8f62e8b64f38.html  dir_0693bdef93574ca592ac8f62e8b64f38_dep.map  dir_0693bdef93574ca592ac8f62e8b64f38_dep.md5  dir_446c8e1cdfbc54717643f4798d23ad6e.html  dir_446c8e1cdfbc54717643f4798d23ad6e_dep.map  dir_446c8e1cdfbc54717643f4798d23ad6e_dep.md5  dir_55541dafa36d2fdaf2cb4a2db864cc27.html  dir_55541dafa36d2fdaf2cb4a2db864cc27_dep.map  dir_55541dafa36d2fdaf2cb4a2db864cc27_dep.md5  dir_75bda33d313130e72d0d459e74fb42c6.html  dir_75bda33d313130e72d0d459e74fb42c6_dep.map  dir_75bda33d313130e72d0d459e74fb42c6_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f4f379f9aa5059b3597bde7106332732.html  dir_f4f379f9aa5059b3597bde7106332732_dep.map  dir_f4f379f9aa5059b3597bde7106332732_dep.md5  doxygen_crawl.html  examples.html  examples.js  graph_legend.html  group__lbal__build__env.html  group__lbal__build__env.js  group__lbal__builtins.html  group__lbal__builtins.js  group__lbal__compiler.html  group__lbal__compiler.js  group__lbal__compiler.map  group__lbal__compiler.md5  group__lbal__compiler__control.html  group__lbal__compiler__control.js  group__lbal__config.html  group__lbal__config.js  group__lbal__decorators.html  group__lbal__decorators.js  group__lbal__features.html  group__lbal__features.js  group__lbal__features.map  group__lbal__features.md5  group__lbal__library.html  group__lbal__library.js  (+17 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_d.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  groups_9.js  groups_a.js  groups_c.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  searchdata.js
include/lucenaBAL/: lbalConfig.hpp  lbalFeatureSetup.hpp  lbalVersion.hpp  lucenaBAL.hpp
include/lucenaBAL/details/: lbalCompilerSetup.hpp  lbalConfig.hpp  lbalDefinitionTests.hpp  lbalDetectCompiler.hpp  lbalDetectStandardLibrary.hpp  lbalFeatureSetup.hpp  lbalGenerated.hpp  lbalKnownVersions.hpp  lbalLibrarySetup.hpp  lbalPlatformSetup.hpp  lbalVersionSetup.hpp
include/lucenaBAL/details/compilers/: lbalAppleClangInitialization.hpp  lbalAppleClangPostInitialization.hpp  lbalClangInitialization.hpp  lbalClangPostInitialization.hpp  lbalCompilerAppleClang.hpp  lbalCompilerClang.hpp  lbalCompilerGCC.hpp  lbalCompilerMSVC.hpp  lbalDetectCompiler.hpp  lbalGCCInitialization.hpp  lbalGCCPostInitialization.hpp  lbalMSVCInitialization.hpp  lbalMSVCPostInitialization.hpp
include/lucenaBAL/details/libraries/: lbalStandardLibraryAppleLibCpp.hpp  lbalStandardLibraryAppleLibCppInitialization.hpp  lbalStandardLibraryAppleLibCppPostInitialization.hpp  lbalStandardLibraryLibCpp.hpp  lbalStandardLibraryLibCppInitialization.hpp  lbalStandardLibraryLibCppPostInitialization.hpp  lbalStandardLibraryLibStdCpp.hpp  lbalStandardLibraryLibStdCppInitialization.hpp  lbalStandardLibraryLibStdCppPostInitialization.hpp  lbalStandardLibraryMSVC.hpp  lbalStandardLibraryMSVCInitialization.hpp  lbalStandardLibraryMSVCPostInitialization.hpp
licenses/: LICENSE.txt
test/: CMakeLists.txt  lbalTest.cpp  lbalTestConfig.hpp
tests/: CMakeLists.txt  lbalFeatureTest.cpp  lbalFormattingTest.cpp  lbalFormattingTest.hpp  lbalTest.cpp  lbalTestConfig.hpp
tests/reference/: lbalFormattingTest.cpp
tools/cmake/: lbalGenerated.hpp.in
